--- a/service-registry/src/main/resources/application.yml
+++ b/service-registry/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8761
 
+spring:
+  application:
+    name: Service Registry
+
 eureka:
   client:
     register-with-eureka: false
